# Distributed_Key-Value-Store

./: Cargo.toml  README.md
common/src/: lib.rs
kvstore/: Cargo.toml
kvstore/src/: config.rs  main.rs
proto/: kv.proto
raftcore/: Cargo.toml
raftcore/src/: events.rs  lib.rs  node.rs  runtime.rs  store.rs
sharding/: Cargo.toml
