[package]
name = "raftcore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
log = "0.4.29"
protobuf = "4.33.2-release"
raft = { version = "0.7.0", default-features = false, features = ["prost-codec"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
slog = "2.8.2"
slog-async = "2.8.0"
slog-term = "2.9.2"
common = { path = "../common" }



